--- a/package.json
+++ b/package.json
@@ -27,13 +27,20 @@
         "url": "https://github.com"
     },
     "dependencies": {
-        "@azure/search-documents": "^12.0.0",
-        "@microsoft/teams-ai": "^1.1.0",
+        "@azure/app-configuration": "^1.8.0",
+        "@azure/core-auth": "^1.9.0",
+        "@azure/identity": "^4.5.0",
+        "@azure/keyvault-secrets": "^4.9.0",
+        "@azure/openai": "^1.0.0-beta.13",
+        "@azure/search-documents": "^12.1.0",
+        "@microsoft/teams-ai": "^1.6.1",
+        "applicationinsights": "^3.4.0",
         "botbuilder": "^4.20.0",
+        "file-type": "^16.5.4",
         "restify": "^10.0.0"
     },
     "devDependencies": {
         "env-cmd": "^10.1.0",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.22"
     }
 }
